# mdnscpp

./: CMakeLists.txt  README.md
examples/: resolver.cpp
src/: mdns.cpp  mdns_old.cpp  network_tools.cpp  socket_unix.cpp
src/mdns/: buffers.h  cpp_concepts.h  mdns.h  mdns_old.h  network_tools.h  network_types.h  socket_unix.h  thread_safety.h
